@startuml
[*] --> BOX_OFF : Start

BOX_OFF --> BOX_READY : Turn ON Box
BOX_READY --> BOX_OFF : Turn OFF Box
BOX_READY --> BOX_ACTIVE : User Connects
BOX_ACTIVE --> BOX_READY : Disconnect All Users

BOX_ACTIVE --> USER_DISCONNECTED : User Connects
USER_DISCONNECTED --> USER_CONNECTED : Connect
USER_CONNECTED --> USER_DISCONNECTED : Disconnect
USER_CONNECTED --> USER_ACTIVE : Start Activity
USER_ACTIVE --> USER_CONNECTED : Stop Activity

USER_ACTIVE --> USER_ENTERTAINMENT : Select Entertainment
USER_ENTERTAINMENT --> USER_ACTIVE : Exit Entertainment
USER_ENTERTAINMENT --> USER_ENTERTAINMENT : Change State (Play, Pause, etc.)

USER_ACTIVE --> USER_SHOPPING : Select Shopping
USER_SHOPPING --> USER_ACTIVE : Exit Shopping
USER_SHOPPING --> USER_SHOPPING : Change State (Search, Cart, etc.)

USER_ACTIVE --> BOX_READY : Stop Interacting
BOX_READY --> [*] : End when Box OFF
@enduml
